# wgsl-language-support

./: Cargo.toml  err.txt  readme.md  test.js
benches/: benchmark.rs  nested.wgsl
src/: lib.rs  parse.rs
src/bench/: parser.rs
src/bench/source_examples/: top.wgsl
src/front/: mod.rs  module.rs  span.rs
src/front/ast/: attribute.rs  expression.rs  mod.rs  statement.rs
src/front/ast/expression/: lhs_expression.rs  mod.rs  relational_expression.rs
src/front/ast/statement/: attribute.rs  declaration.rs  mod.rs
src/front/module/: scope.rs  type.rs
src/front/token/: ident.rs  mod.rs  parse.rs  template.rs
src/parse/: ast.rs  lexer.rs  literal.rs  span.rs  templates.rs  tokenizer.rs
src/parse/ast/: expression.rs  statement.rs
src/parse/ast/expression/: lhs_expression.rs  relational_expression.rs
src/test_files/: basic.wgsl
